get messages by online request; log reactions updates

--- a/templates/navbar.gohtml
+++ b/templates/navbar.gohtml
@@ -24,6 +24,8 @@
                         <li><a class="dropdown-item disabled" href="/m">Single message</a></li>
                         <li><a class="dropdown-item disabled" href="/f">File</a></li>
                         <li><a class="dropdown-item disabled" href="/li">Link info</a></li>
+                        <li><a class="dropdown-item disabled" href="/h">History by offline messages</a></li>
+                        <li><a class="dropdown-item disabled" href="/h">Online history</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
