--- a/templates/overview_table.gohtml
+++ b/templates/overview_table.gohtml
@@ -6,7 +6,7 @@
             Type
         </th>
         <th scope="col">
-            T
+            Topics
         </th>
         <th scope="col">
             Username
