remove local message storage

--- a/templates/navbar.gohtml
+++ b/templates/navbar.gohtml
@@ -12,7 +12,6 @@
                         Actions
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="/j">Journal</a></li>
                         <li><a class="dropdown-item" href="/l">Chats list</a></li>
                         <li><a class="dropdown-item" href="/to">TDLib options</a></li>
                         <li><a class="dropdown-item" href="/as">Active sessions</a></li>
@@ -24,8 +23,7 @@
                         <li><a class="dropdown-item disabled" href="/m">Single message</a></li>
                         <li><a class="dropdown-item disabled" href="/f">File</a></li>
                         <li><a class="dropdown-item disabled" href="/li">Link info</a></li>
-                        <li><a class="dropdown-item disabled" href="/h">History by offline messages</a></li>
-                        <li><a class="dropdown-item disabled" href="/h">Online history</a></li>
+                        <li><a class="dropdown-item disabled" href="/h/%id">History</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
