fix history link

--- a/templates/overview_table.gohtml
+++ b/templates/overview_table.gohtml
@@ -41,7 +41,7 @@
 
         </td>
         <td>
-            <a href="/ho/{{.ChatId}}">{{.ChatName}}</a>
+            <a href="/h/{{.ChatId}}">{{.ChatName}}</a>
         </td>
         <td>
             {{if gt .CountUnread 0}}
