--- a/templates/chatlist.gohtml
+++ b/templates/chatlist.gohtml
@@ -16,6 +16,9 @@
             {{end}}
             <a class="btn btn-sm {{$btnClass}}" href="/l?folder={{.Id}}">{{.Title}}</a>
         {{end}}
+        {{if gt .PartnerChat.ChatId 0}}
+            <a class="btn btn-sm btn-success" href="/l?groups_in_common_userid={{.PartnerChat.ChatId}}">g: {{.PartnerChat.ChatName}}</a>
+        {{end}}
         <a class="btn btn-sm btn-danger" href="/l?folder={{$sel}}&refresh=1">Refresh</a>
     </div>
 </div>
