--- a/templates/overview_table.gohtml
+++ b/templates/overview_table.gohtml
@@ -1,7 +1,11 @@
 {{define "overview_table"}}
+<form method="post">
 <table id="overview_table" class="table table-hover table-sm">
     <thead class="">
     <tr>
+        <th scope="col">
+            ✔️
+        </th>
         <th scope="col">
             Type
         </th>
@@ -28,6 +32,12 @@
         data-unread="{{.CountUnread}}"
         data-messages="{{.CountMessages}}"
     >
+        <td>
+            <div class="form-check">
+                <label for="c_{{.ChatId}}"></label>
+                <input class="form-check-input" type="checkbox" name="chats" value="{{.ChatId}}" id="c_{{.ChatId}}">
+            </div>
+        </td>
         <td>
             {{.Type}}
         </td>
@@ -57,4 +67,22 @@
     {{end}}
     </tbody>
 </table>
+    <div class="d-inline-flex">
+        <div class="input-group">
+            <span class="input-group-text" id="folder-icon">📂</span>
+            <label for="add_to_folder"></label>
+            <select class="form-select me-2" id="add_to_folder" name="add_to_folder" aria-describedby="folder-icon">
+                {{$sel := false}}
+                {{range .ChatFolders}}
+                    {{if lt .Id 1}}
+                    {{else}}
+                        <option value="{{.Id}}">{{.Title}}</option>
+                    {{end}}
+                {{end}}
+            </select>
+        </div>
+    </div>
+
+    <input type="submit" class="btn btn-sm btn-primary" value="Add chats to folder" name="submit">
+</form>
 {{end}}
